--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,14 @@ android {
         }
     }
     configurations.all {
-        resolutionStrategy.force 'com.android.support:support-annotations:27.1.1'
+        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+            def requested = details.requested
+            if (requested.group == 'com.android.support') {
+                if (!requested.name.startsWith("multidex")) {
+                    details.useVersion '26.1.0'
+                }
+            }
+        }
     }
 }
 
@@ -26,8 +33,16 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     testImplementation 'junit:junit:4.12'
+    compile "android.arch.lifecycle:runtime:1.1.1"
+    compile "android.arch.lifecycle:extensions:1.1.1"
+    compile 'com.android.support:cardview-v7:26.1.1'
+    compile 'com.android.support:recyclerview-v7:26.1.1'
+    compile "android.arch.persistence.room:runtime:1.1.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.0"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
