--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,15 +40,17 @@ dependencies {
     implementation 'com.sothree.slidinguppanel:library:3.4.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:design:26.1.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    testImplementation 'junit:junit:4.12'
     compile "android.arch.lifecycle:runtime:1.1.1"
     compile "android.arch.lifecycle:extensions:1.1.1"
     compile 'com.android.support:cardview-v7:26.1.1'
     compile 'com.android.support:recyclerview-v7:26.1.1'
     compile "android.arch.persistence.room:runtime:1.1.0"
     annotationProcessor "android.arch.persistence.room:compiler:1.1.0"
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.7.22'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
